# cell.ai

./: .gitignore  README.md  agent.py  app.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.streamlit/: config.toml
analysis/: input_volume_impact.ipynb  round_analyses.ipynb
data/: orchestrator_state.json  (+12 more)
elnora-cli/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
elnora-cli/.claude/: settings.json
elnora-cli/.claude-plugin/: plugin.json
elnora-cli/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
elnora-cli/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
elnora-cli/.github/workflows/: ci.yml  codeql.yml  publish.yml  release-please.yml
elnora-cli/skills/elnora-admin/: SKILL.md
elnora-cli/skills/elnora-agent/: SKILL.md
elnora-cli/skills/elnora-files/: SKILL.md
elnora-cli/skills/elnora-folders/: SKILL.md
elnora-cli/skills/elnora-orgs/: SKILL.md
elnora-cli/skills/elnora-platform/: SKILL.md
elnora-cli/skills/elnora-projects/: SKILL.md
elnora-cli/skills/elnora-search/: SKILL.md
elnora-cli/skills/elnora-tasks/: SKILL.md
elnora-cli/src/elnora/: __init__.py  cli.py
elnora-cli/src/elnora/commands/: __init__.py  account.py  api_keys.py  audit.py  auth.py  completion.py  feedback.py  files.py  flags.py  folders.py  health.py  library.py  orgs.py  projects.py  search.py  tasks.py
elnora-cli/src/elnora/lib/: __init__.py  client.py  config.py  errors.py  profiles.py  update_check.py  validation.py
elnora-cli/tests/: conftest.py  test_cli.py  test_client.py  test_commands.py  test_completion.py  test_errors.py  test_org_switch.py  test_profiles.py  test_validation.py
(+80 files in other folders)
