[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elnora"
version = "0.7.2"
description = "CLI for the Elnora AI platform"
requires-python = ">=3.10"
dependencies = ["click>=8.1,<9"]
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Elnora AI", email = "support@elnora.ai"}]
keywords = ["elnora", "bioprotocol", "lab", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://elnora.ai"
Repository = "https://github.com/Elnora-AI/elnora-cli"
Changelog = "https://github.com/Elnora-AI/elnora-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/Elnora-AI/elnora-cli/issues"

[dependency-groups]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
elnora = "elnora.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elnora"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
